--- a/19125063_19125119/app/build.gradle
+++ b/19125063_19125119/app/build.gradle
@@ -41,3 +41,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation 'com.google.code.gson:gson:2.8.7'
 }
+
+dependencies {
+    implementation 'com.loopj.android:android-async-http:1.4.9'
+}
