--- a/19125063_19125119/app/build.gradle
+++ b/19125063_19125119/app/build.gradle
@@ -40,8 +40,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation 'com.google.code.gson:gson:2.8.7'
-}
 
-dependencies {
-    implementation 'com.loopj.android:android-async-http:1.4.9'
+    implementation 'com.github.AndroidDeveloperLB:AutoFitTextView:8'
 }
