--- a/19125063_19125119/app/build.gradle
+++ b/19125063_19125119/app/build.gradle
@@ -43,3 +43,6 @@ dependencies {
 
     implementation 'com.github.AndroidDeveloperLB:AutoFitTextView:8'
 }
+dependencies {
+    implementation 'com.loopj.android:android-async-http:1.4.9'
+}
